Customized profile page format with placeholders

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,6 +1,7 @@
 .footer-background {
   background-color: #000;
   color: #999;
+  margin-top:20px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
