Updated styles on edit profile and user bios page

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -99,4 +99,10 @@
 }
 
 
+.editprofile-container {
+  background-color:#fff6f0;
+  margin-top: 125px;
+  border-radius: 25px;
+  margin-bottom: 125px;
+}
 
