--- a/app/imports/ui/pages/BioPage/biopage.css
+++ b/app/imports/ui/pages/BioPage/biopage.css
@@ -3,3 +3,15 @@
   display: -ms-flexbox !important;
   position: fixed;
 }
+
+
+.ui.pageContainer {
+  background-color:#fff6f0;
+  border-radius: 25px;
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
+.button-spacing {
+  margin-left: 30px;
+}
