--- a/app/client/style.css
+++ b/app/client/style.css
@@ -98,11 +98,22 @@
   background-image: url("/images/manoa-area.png");
 }
 
+.button-spacing {
+  margin-left: 250px;
+}
+
 
 .editprofile-container {
   background-color:#fff6f0;
   margin-top: 125px;
   border-radius: 25px;
   margin-bottom: 125px;
+}
+
+.signout-container {
+  margin-top: 240px;
+  margin-bottom: 350px;
+  border-radius: 25px;
+  background-color:#fff6f0;
 }
 
