styled user profile page

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -125,3 +125,14 @@
   margin-right: 135px;
 }
 
+.connect-button-spacing {
+  margin-right: 400px;
+}
+
+.listing-spacing {
+margin-right: 430px;
+}
+
+.profile-top-margin {
+  margin-top: 20px;
+}
